# embeddedtorch

./: LICENSE  README.md  classes.cpp  cpp.py  func.cpp  func.hpp  main  main.py  operitions.py  ops.py  pyproject.toml  template.cpp  try.cpp
.github/: pages-deploy.yml
.github/workflows/: jekyll.yml
docs/: 404.md  Gemfile  JEKYLL_SETUP.md  LOCAL_VIEW.md  QUICK_START.md  README.md  _config.yml  api-reference.md  examples.md  feed.xml  getting-started.md  index.md  layers.md  operations.md
docs/_includes/: analytics.html  footer.html  head.html  header.html
docs/_layouts/: default.html
docs/_posts/: 2024-01-01-welcome.md
embeddedtorch/: __init__.py  cpp.py  main.py  operitions.py  rust.py  template.cpp  template.py
embeddedtorch/docs/: JEKYLL_SETUP.md  LOCAL_VIEW.md  examples.md  feed.xml  operations.md
embeddedtorch/docs/_includes/: head.html  header.html
embeddedtorch/docs/assets/css/: main.scss
embeddedtorch/layers/: __init__.py  conv.py  embedding.py  linear.py  norms.py  ops_collections.py  pooling.py  upsample.py
examples/Employee Turn Over/: README.md
layers/: __init__.py
